--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,9 +4,11 @@
   "exclude": ["source/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["source/*"]
+      "@/*": [
+        "./source/*"
+      ]
     }
   }
 }
