--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "tailwindcss": "^4.1.18",
     "tesseract.js": "^7.0.0",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
