--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ dist
 dist-ssr
 coverage
 *.local
+.tmp
+build
+models
 
 # Editor directories and files
 .vscode/*
@@ -28,9 +31,3 @@ coverage
 
 .eslintcache
 
-# Cypress
-/cypress/videos/
-/cypress/screenshots/
-
-# Vitest
-__screenshots__/
