--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
-  "name": "ilovemedia",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli source/"
-  },
-  "dependencies": {
-    "@ffmpeg/ffmpeg": "^0.12.15",
-    "@ffmpeg/util": "^0.12.2",
-    "@imgly/background-removal": "^1.7.0",
-    "@tailwindcss/vite": "^4.1.18",
-    "@vueuse/core": "^14.1.0",
-    "@xenova/transformers": "^2.17.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "kokoro-js": "^1.2.1",
-    "lucide-vue-next": "^0.562.0",
-    "qrcode": "^1.5.4",
-    "reka-ui": "^2.7.0",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18",
-    "tesseract.js": "^7.0.0",
-    "vue": "^3.5.25",
-    "vue-router": "^4.6.3",
-    "vue-sonner": "^2.0.9"
-  },
-  "devDependencies": {
-    "@tsconfig/node24": "^24.0.3",
-    "@types/node": "^24.10.1",
-    "@types/qrcode": "^1.5.6",
-    "@vitejs/plugin-vue": "^6.0.2",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/tsconfig": "^0.8.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-vue": "~10.5.1",
-    "jiti": "^2.6.1",
-    "npm-run-all2": "^8.0.4",
-    "prettier": "3.6.2",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "~5.9.0",
-    "vite": "^7.2.4",
-    "vite-plugin-vue-devtools": "^8.0.5",
-    "vue-tsc": "^3.1.5"
-  }
+	"name": "ilovemedia",
+	"version": "1.0.0",
+	"private": true,
+	"type": "module",
+	"engines": {
+		"node": "^20.19.0 || >=22.12.0"
+	},
+	"scripts": {
+		"dev": "vite",
+		"build": "vue-tsc --build && vite build",
+		"preview": "vite preview",
+		"type-check": "vue-tsc --build",
+		"lint": "eslint . --fix --cache",
+		"format": "prettier --write --experimental-cli source/",
+		"postinstall": "node scripts/download-whisper.mjs"
+	},
+	"dependencies": {
+		"@ffmpeg/core": "^0.12.10",
+		"@ffmpeg/ffmpeg": "^0.12.15",
+		"@ffmpeg/util": "^0.12.2",
+		"@imgly/background-removal": "^1.7.0",
+		"@tailwindcss/vite": "^4.1.18",
+		"@vueuse/core": "^14.1.0",
+		"@xenova/transformers": "^2.17.2",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"kokoro-js": "^1.2.1",
+		"lucide-vue-next": "^0.562.0",
+		"qrcode": "^1.5.4",
+		"reka-ui": "^2.7.0",
+		"tailwind-merge": "^3.4.0",
+		"tailwindcss": "^4.1.18",
+		"tesseract.js": "^7.0.0",
+		"vue": "^3.5.25",
+		"vue-router": "^4.6.3",
+		"vue-sonner": "^2.0.9"
+	},
+	"devDependencies": {
+		"@tsconfig/node24": "^24.0.3",
+		"@types/node": "^24.10.1",
+		"@types/qrcode": "^1.5.6",
+		"@vitejs/plugin-vue": "^6.0.2",
+		"@vue/eslint-config-prettier": "^10.2.0",
+		"@vue/eslint-config-typescript": "^14.6.0",
+		"@vue/tsconfig": "^0.8.1",
+		"eslint": "^9.39.1",
+		"eslint-plugin-vue": "~10.5.1",
+		"jiti": "^2.6.1",
+		"prettier": "3.6.2",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "~5.9.0",
+		"vite": "^7.2.4",
+		"vite-plugin-pwa": "^1.2.0",
+		"vite-plugin-vue-devtools": "^8.0.5",
+		"vue-tsc": "^3.1.5"
+	}
 }
