revert: default to loading models from cdn for quick access
- users all over the world can access the models from a global cdn
-  error encountered when using env.allowLocalModels=true, whisper model type not supported

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"preview": "vite preview",
 		"type-check": "vue-tsc --build",
 		"lint": "eslint . --fix --cache",
-		"format": "prettier --write --experimental-cli source/",
-		"postinstall": "node scripts/download-whisper.mjs"
+		"format": "prettier --write --experimental-cli source/"
 	},
 	"dependencies": {
 		"@ffmpeg/core": "^0.12.10",
