chore(refactor): added bg-removal-data download script
- @imgly/background-removal recommends self hosting data parts. This tool was not working well because broken parts. Using esm.sh to load @img/background-removal packages works well

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ coverage
 *.local
 .tmp
 build
-models
 
 # Editor directories and files
 .vscode/*
@@ -31,3 +30,5 @@ models
 
 .eslintcache
 
+public/models/package*
+public/models/imgly
