--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"preview": "vite preview",
 		"type-check": "vue-tsc --build",
 		"lint": "eslint . --fix --cache",
-		"format": "prettier --write --experimental-cli source/"
+		"format": "prettier --write --experimental-cli source/",
+		"postinstall": "node scripts/download-bg-removal-data.mjs"
 	},
 	"dependencies": {
 		"@ffmpeg/core": "^0.12.10",
@@ -26,6 +27,7 @@
 		"clsx": "^2.1.1",
 		"kokoro-js": "^1.2.1",
 		"lucide-vue-next": "^0.562.0",
+		"onnxruntime-web": "1.21.0-dev.20250206-d981b153d3",
 		"qrcode": "^1.5.4",
 		"reka-ui": "^2.7.0",
 		"tailwind-merge": "^3.4.0",
