--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"type-check": "vue-tsc --build",
 		"lint": "eslint . --fix --cache",
 		"format": "prettier --write --experimental-cli source/",
-		"postinstall": "node scripts/download-bg-remover-data.mjs"
+		"postinstall": "node scripts/download-bg-remover-data.mjs",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@ffmpeg/core": "^0.12.10",
@@ -47,7 +48,9 @@
 		"@vue/tsconfig": "^0.8.1",
 		"eslint": "^9.39.1",
 		"eslint-plugin-vue": "~10.5.1",
+		"husky": "^9.1.7",
 		"jiti": "^2.6.1",
+		"lint-staged": "^16.2.7",
 		"prettier": "3.6.2",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "~5.9.0",
@@ -55,5 +58,10 @@
 		"vite-plugin-pwa": "^1.2.0",
 		"vite-plugin-vue-devtools": "^8.0.5",
 		"vue-tsc": "^3.1.5"
+	},
+	"lint-staged": {
+		"*.{vue,mjs,ts}": [
+			"pnpm format"
+		]
 	}
 }
