--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@diffusionstudio/vits-web": "^1.0.3",
 		"@ffmpeg/core": "^0.12.10",
 		"@ffmpeg/ffmpeg": "^0.12.15",
 		"@ffmpeg/util": "^0.12.2",
@@ -26,7 +27,6 @@
 		"@xenova/transformers": "^2.17.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"kokoro-js": "^1.2.1",
 		"lucide-vue-next": "^0.562.0",
 		"onnxruntime-web": "1.21.0-dev.20250206-d981b153d3",
 		"qrcode": "^1.5.4",
