--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"vue-sonner": "^2.0.9"
 	},
 	"devDependencies": {
+		"@release-it/conventional-changelog": "^10.0.4",
 		"@tsconfig/node24": "^24.0.3",
 		"@types/node": "^24.10.1",
 		"@types/qrcode": "^1.5.6",
@@ -52,6 +53,7 @@
 		"jiti": "^2.6.1",
 		"lint-staged": "^16.2.7",
 		"prettier": "3.6.2",
+		"release-it": "^19.2.4",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "~5.9.0",
 		"vite": "^7.2.4",
