--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: lts
+                  node-version: latest
 
             - uses: pnpm/action-setup@v4
               name: Install pnpm
