--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,11 @@ name: Deploy to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ['master']
+    branches:
+      - master
+    paths:
+      - source/
+      - public/
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
